force-app/main/default/objects/Product2/fields/invoicetype__c.field-meta.xml
<CustomField>
    <fullName>invoicetype__c</fullName>
    <label>請求形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一括前払</fullName>
                <default>true</default>
                <label>一括前払</label>
            </value>
            <value>
                <fullName>一括後払</fullName>
            </value>
            <value>
                <fullName>月次分割</fullName>
            </value>
            <value>
                <fullName>継続課金_前請求</fullName>
                <isActive>false</isActive>
                <label>継続課金_前請求</label>
            </value>
            <value>
                <fullName>継続課金_後請求</fullName>
                <isActive>false</isActive>
                <label>継続課金_後請求</label>
            </value>
            <value>
                <fullName>継続課金_月次請求</fullName>
                <isActive>false</isActive>
                <label>継続課金_月次請求</label>
            </value>
            <value>
                <fullName>前請求（開始日）</fullName>
                <isActive>false</isActive>
                <label>前請求（開始日）</label>
            </value>
            <value>
                <fullName>後請求（翌日）</fullName>
                <isActive>false</isActive>
                <label>後請求（翌日）</label>
            </value>
            <value>
                <fullName>分割月次請求</fullName>
                <isActive>false</isActive>
                <label>分割月次請求</label>
            </value>
            <value>
                <fullName>一回課金_開始日請求</fullName>
                <isActive>false</isActive>
                <label>一回課金_開始日請求</label>
            </value>
            <value>
                <fullName>一回課金_終了日請求</fullName>
                <isActive>false</isActive>
                <label>一回課金_終了日請求</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>