force-app/main/default/objects/Product2/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>式</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>個</fullName>
            </value>
            <value>
                <fullName>セット</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>